# booking

./: .gitignore  Makefile  download_and_unpack.sh  index.html  pyproject.toml
booking/: pipelines.py  settings.py  utils.py
booking/spiders/: countries.py  prices.py  spider.py
output/: 2025-10-30 14:42:38 .jsonl
rnd/: countries.ipynb  rnd.ipynb  sitembk-country-en-gb.0000.xml  sitembk-hotel-index.xml
