[project]
name = "booking"
version = "0.1.0"
description = ""
authors = [{ name = "Alekei Grachev", email = "aleksei.grachev@alberblanc.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "scrapy~=2.13.3",
    "jupyter~=1.1.1",
    "parse~=1.20.2",
    "tqdm~=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
